Finish user edit implementation, fix spacing on user profile

--- a/src/index.css
+++ b/src/index.css
@@ -54,10 +54,14 @@ code {
   font-size: 1rem !important;
 }
 
-.btn-edit {
+.teamA-btn {
   color: white !important;
 }
 
 .edit-lbl {
   font-size: 1.25rem !important;
+}
+
+.space-fix {
+  padding-left: 50px !important;
 }
